# rv

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  rvApp  rvMain  setup.cfg  setup.py
docs/: index.rst
docs/rv/: changes.rst  index.rst
rv/: __init__.py  _astropy_init.py  conftest.py  fitter.py  main.py  model.py  plot.py  rv.py  setup_package.py  util.py
rv/static/css/: rv.css
rv/static/js/: rv.js
rv/templates/: doc.html  index.html  master.html  plots.html  star.html  stars.html
rv/tests/: setup_package.py  test_fitter.py  test_model.py  test_plot.py  test_rv.py  test_util.py
rv/tests/t/: apogee_vrel_testdata.fits  testdata_index.html
