[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = rv
description = Astropy affiliated package
long_description = Radial velocity webapp using Flask.
author = Benjamin Alan Weaver
author_email = benjamin.weaver@nyu.edu
license = BSD
url = http://sdss.physics.nyu.edu/apogee-rv/
edit_on_github = False
github_project = weaverba137/rv

[entry_points]
rv = rv.main:main
# rvApp = rv.rv:main
